# qrcode_toolkit

./: .gitignore  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml
core/: __init__.py  database.py  engine.py  models.py  scanner.py
examples/: batch_example.csv
gui/: __init__.py  batch_processor.py  main_window.py  template_editor.py  template_manager.py  widgets.py
tests/: conftest.py  test_batch_processor.py  test_constants.py  test_database.py  test_engine.py  test_models.py  test_scanner.py  test_template_editor.py  test_template_manager.py  test_widgets.py
utils/: __init__.py  constants.py
