[project]
name = "qrcode-toolkit"
version = "0.1.0"
description = "QR Code Toolkit - 二维码工具箱"
authors = [
  {name = "码上工坊", email = "3892493481@qq.com"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["QR", "PySide6", "Python", "二维码", "toolkit", "工具箱"]
requires-python = ">=3.13"
dependencies = [
    "chardet>=5.2.0",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.0",
    "pyside6>=6.10.2",
    "pyside6-stubs>=6.7.3.0",
    "pyzbar>=0.1.9",
    "qrcode>=8.2",
    "segno>=1.6.6",
    "types-qrcode>=8.2.0.20250914",
]



[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[dependency-groups]
dev = [
    "black>=26.1.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.0",
]
